# Aether3D

./: .gitattributes  .gitignore  .gitmodules  BLAKE3_INVESTIGATION_REPORT.md  CAPTURE_PIPELINE.md  CODEOWNERS  COMMIT_MESSAGE_TEMPLATE.txt  CONTRIBUTING.md  CROSS_PLATFORM_STACK.md  Info.plist  LICENSE  NOTICE  PATCH_PROMPT.md  PR10_IMPLEMENTATION_PROMPT.md  PR10_PATCH_SUPPLEMENT.md  PR10_PATCH_V2_SUPPLEMENT.md  PR10_PATCH_V3_SUPPLEMENT.md  PR10_PATCH_V4_SUPPLEMENT.md  PR10_QUALITY_REPORT_CN.md  PR10_QUALITY_REPORT_V2_CN.md  PR10_QUALITY_REPORT_V3_CN.md  PR17_JOB_QUEUE_SCHEDULER_PROMPT.md  PR1_CONSTITUTION_PATCH_PROMPT.md  PR1_CONSTITUTION_PATCH_PROMPT_V2.md  PR1_CONSTITUTION_PATCH_V3_DELTA.md  PR1_F_CLASS_PIZ_INDUSTRIAL_SEALING_UPGRADE_PLAN.md  PR1_PRE_PUSH_VERIFICATION_PROMPT.md  PR1_V2.4_ADDENDUM_IMPLEMENTATION_SUMMARY.md  PR1_V2.4_ADVERSARIAL_VERIFICATION_FINAL_REPORT.md  PR1_V2.4_CROSS_PLATFORM_VERIFICATION_SUMMARY.md  PR1_V2.4_VERIFICATION_SUITE_COMPLETION.md  PR1_V2.4_VERIFICATION_SUITE_SUMMARY.md  PR1_v2.4_EXTREME_Addendum_Implementation_Output.md  PR2_JSM_CI_FIX_PROMPT.md  PR2_JSM_ENHANCEMENT_PATCH_V2.md  PR2_JSM_FINAL_PUSH_PROMPT.md  PR2_JSM_OPTIMIZATION_PROMPT.md  PR2_JSM_PHASE1_BUILD_PROMPT.md  PR2_JSM_PHASE2_BUILD_PROMPT.md  PR2_JSM_v2.5_VERIFICATION_REPORT.md  (+46 more)
aether_cpp/: CMakeLists.txt  PHASE3_BLOCKER.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PHASE6_4_BATCH2_PROMPT_V2.md  PHASE6_PLAN.md  PHASE_BACKLOG.md  PHASE_FLUTTER_VIEWER_PLAN.md  aether3d_ffi.podspec
aether_cpp/build_codex_fix/: CMakeCache.txt  CTestTestfile.cmake  Makefile  c_api_tests  cmake_install.cmake
aether_cpp/golden/: manifest.json  pr4math_golden_v1.json
aether_cpp/include/: aether_depth_tile_c.h  aether_glb_norm_c.h  aether_tsdf_c.h  module.modulemap
aether_cpp/include/aether/: aether_version.h
aether_cpp/scripts/: bake_one_wgsl.cmake
aether_cpp/scripts/wgsl_preprocess/: Cargo.toml
aether_cpp/shaders/wgsl/: map_gaussian_to_intersects.wgsl  mesh_render.wgsl  prefix_sum_add_scanned_sums.wgsl  prefix_sum_scan.wgsl  prefix_sum_scan_sums.wgsl  project_backwards.wgsl  project_forward.wgsl  project_visible.wgsl  quality_metrics_blur.wgsl  quality_metrics_brightness.wgsl  quality_metrics_motion.wgsl  rasterize.wgsl  rasterize_backwards.wgsl  sort_count.wgsl  sort_prep_depth.wgsl  sort_reduce.wgsl  sort_scan.wgsl  sort_scan_add.wgsl  sort_scatter.wgsl  splat_render.wgsl
aether_cpp/src/: c_api.cpp  geo_c_api.cpp  mobile_whitebox_c_api.cpp  tsdf_volume.cpp
aether_cpp/src/core/: canonicalize.cpp  numeric_guard.cpp  version.cpp
aether_cpp/src/crypto/: sha256.cpp
aether_cpp/src/evidence/: admission_controller.cpp  coverage_estimator.cpp  deterministic_json.cpp  ds_mass_function.cpp  evidence_state_machine.cpp  patch_display_kernel.cpp  pr1_admission_kernel.cpp  pr1_information_gain.cpp  pr_math.cpp  replay_engine.cpp  smart_anti_boost_smoother.cpp
aether_cpp/src/geo/: altitude_engine.cpp  asc_cell.cpp  cross_temporal_gs.cpp  geo_cluster.cpp  geo_indexer.cpp  geo_privacy.cpp  haversine.cpp  map_globe_projection.cpp  map_label_sdf.cpp  map_renderer.cpp  map_terrain.cpp  map_tile_mesh.cpp  map_tile_source.cpp  rtree.cpp  sol_illumination.cpp  spoof_detector.cpp  temporal_cluster.cpp  temporal_index.cpp
aether_cpp/src/glb_norm/: atlas_merger.cpp  atlas_merger.h  glb_io.cpp  glb_io.h  glb_normalize_c_api.cpp  mesh_simplify.cpp  mesh_simplify.h
aether_cpp/src/innovation/: core_types.cpp  f1_progressive_compression.cpp  f1_time_mirror.cpp  f2_scaffold_collision.cpp  f3_evidence_constrained_compression.cpp  f5_delta_patch_chain.cpp  f6_conflict_dynamic_rejection.cpp  f7_shaderml_decode.cpp  f8_uncertainty_field.cpp  f9_scene_passport_watermark.cpp  scaffold_patch_map.cpp
aether_cpp/src/memory/: arena.cpp
aether_cpp/src/merkle/: consistency_proof.cpp  inclusion_proof.cpp  merkle_tree.cpp  merkle_tree_hash.cpp
aether_cpp/src/pipeline/: aether_depth_tile_c.cpp  coordinator_c_api.cpp  depth_inference_coreml.mm  local_preview_runtime.cpp  local_preview_seeding.cpp  local_subject_first_capture_overlay.cpp  local_subject_first_export_snapshot.cpp  local_subject_first_fallback_seeding.cpp  local_subject_first_ingest.cpp  local_subject_first_refine.cpp  local_subject_first_training.cpp  mask_post.cpp  pipeline_coordinator.cpp  runtime_tsdf_gaussian_augmentation.cpp  scale_align.cpp  streaming_c_api.cpp  streaming_pipeline.cpp  tile_blend.cpp  tile_layout.cpp
aether_cpp/src/pocketworld/: background_download.cpp  dawn_device_singleton.cpp  dawn_device_singleton.h  glb_loader.cpp  render_policy.cpp  (+3 more)
aether_cpp/tests/: c_api_tests.cpp  fixture_replay_tests.cpp  status_tests.cpp  test_affine_depth_alignment.cpp
aether_cpp/tools/: aether_dawn_baked_wgsl_smoke.cpp  aether_dawn_gpu_device_smoke.cpp  aether_dawn_hello.cpp  aether_dawn_hello_compute.cpp  aether_dawn_hello_triangle.cpp  aether_dawn_iosurface_rgba16f_smoke.mm  aether_dawn_scene_splat_smoke.mm  aether_dawn_sort_test_data.h  aether_dawn_splat_smoke_cross_validate.cpp  aether_dawn_splat_smoke_cross_validate_via_device.cpp  aether_dawn_splat_smoke_map_gaussian_to_intersects.cpp  aether_dawn_splat_smoke_prefix_sum_add_scanned_sums.cpp  aether_dawn_splat_smoke_prefix_sum_scan.cpp  aether_dawn_splat_smoke_prefix_sum_scan_sums.cpp  aether_dawn_splat_smoke_project_backwards.cpp  aether_dawn_splat_smoke_project_forward.cpp  aether_dawn_splat_smoke_project_forward_via_device.cpp  aether_dawn_splat_smoke_project_visible.cpp  aether_dawn_splat_smoke_rasterize.cpp  aether_dawn_splat_smoke_rasterize_backwards.cpp  aether_dawn_splat_smoke_render.cpp  aether_dawn_splat_smoke_render_via_device.cpp  aether_dawn_splat_smoke_sort_count.cpp  aether_dawn_splat_smoke_sort_reduce.cpp  aether_dawn_splat_smoke_sort_scan.cpp  aether_dawn_splat_smoke_sort_scan_add.cpp  aether_dawn_splat_smoke_sort_scatter.cpp  aether_dawn_splat_test_data.h  aether_glb_loader_smoke.cpp  aether_mesh_render_compile_smoke.cpp  aether_render_policy_smoke.cpp  aether_splat_iosurface_renderer_smoke.cpp  aether_version_test.cpp  dawn_kernel_harness.cpp  dawn_kernel_harness.h  glb_norm_smoke.cpp
(+2243 files in other folders)
